--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ahnjeonghyeon.hcicafein.MainActivity">
-
+,<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="infotest"
+    android:id="@+id/testbtn"/>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
